Fixes navbar spacing

--- a/static/abstracts/_mixins.scss
+++ b/static/abstracts/_mixins.scss
@@ -9,7 +9,7 @@
   .menu {
       &-nav {
           margin: 0;
-          padding-left: 1rem;
+          margin-left: -2.5rem;
           background-color: color.adjust($link-color, $lightness: -5%);
           list-style: none;
           border-top: thin solid slategrey;
